--- a/sajucheck.html
+++ b/sajucheck.html
@@ -84,7 +84,7 @@
             일 <input type="text" id="text_day"> &nbsp;&nbsp;&nbsp;
             시 <input type="text" id="text_time">
         <br><br>
-            <button type="button" id="btn1" onclick="printt()"> 시간&nbsp;입력 </button> <!-- 테이블에 지지 출력-->
+            <button type="button" id="btn1" onclick="printt()"> 사주입력 </button> <!-- 테이블에 지지 출력-->
             <button type="button" id="btn3" onclick="clearr()"> 초기화 </button> <!-- 테이블 출력부분 초기화-->
         </p>
         <script type="text/javascript">
